# song-fingerprint-matching

./: .gitignore  README.md
backend/: main.py  poetry.toml  pyproject.toml
backend/api/: id.py
backend/db/: connection.py  index.py  models.py
backend/services/: audio_loader.py  matcher.py  preprocesser.py
fingerprinting_engine/: CMakeLists.txt  bindings.cpp  pyproject.toml
fingerprinting_engine/include/: constants.hpp  fft.hpp  fingerprint.hpp  hash.hpp  peaks.hpp  spectrogram.hpp
fingerprinting_engine/src/: fft.cpp  fingerprint.cpp  hash.cpp  peaks.cpp  spectrogram.cpp
scripts/: ingest.py
