[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for audio fingerprint matching"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = "^0.27"
numpy = "^1.26"
pymongo = "^4.6"
python-multipart = "^0.0.9"
redis = "^5.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
black = "^24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
