[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "fingerprint_engine"
version = "0.1.0"
description = "C++ audio fingerprinting engine with Python bindings"
requires-python = ">=3.11"

[tool.scikit-build]
cmake.build-type = "Release"
